# BT-Bike-Light

./: .gitignore  README.md
docs/: BT-Bike-Light_HW-Architecture.drawio  DWG_HW-Architecture.drawio
firmware/: README.md  west.yml
firmware/boards/arm/bt_bike_light/: Kconfig.board  Kconfig.defconfig  bt_bike_light.dts  bt_bike_light_defconfig
firmware/nordic/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
firmware/nordic/src/: accel.c  accel.h  button.c  button.h  device.c  device.h  led.c  led.h  main.c  sys.c  sys.h
firmware/nordic/src/drivers/: lis2dtw12.c  lis2dtw12.h
hardware/: Accelerometer.kicad_sch  BT-Bike-Light.kicad_pcb  BT-Bike-Light.kicad_pro  BT-Bike-Light.kicad_sch  Battery_Charger.kicad_sch  Battery_Monitor.kicad_sch  Battery_Protection.kicad_sch  LED_Driver.kicad_sch  README.md  fp-lib-table  sym-lib-table
hardware/lib/: XLamp XP-E2 XP-G2.STEP
hardware/lib/Fanstel.pretty/: BC805M.kicad_mod
hardware/libs/: Diodes-Incorporated.kicad_sym  Fanstel.kicad_sym  Microchip.kicad_sym  STMicroelectronics.kicad_sym
hardware/libs/CUI-Devices.pretty/: UJC-HP2-3-SMT-TR.kicad_mod
hardware/libs/Keystone.pretty/: 254.kicad_mod
